change module settings for jfoenix support